
2020-05-26  Ron Norman <rjn@inglenet.com>
	* codegen.c: In output_local_field_cache if REPORT field
			then use output_emit_field 

2020-05-06  Ron Norman <rjn@inglenet.com>
	* cobc.c: Added -G to experiment with 'gdb' and COBOL source
			This is experimental and not for production.
	* codegen.c: Added code to emit #line with reference only to
			the COBOL source code. 
			'gdb' sort of works but not good enough yet

2020-05-05  Ron Norman <rjn@inglenet.com>
	* flag.def, cobc.c, codegen.c: removed -fif-cutoff completely

2020-04-27  Ron Norman <rjn@inglenet.com>
	* codeoptim.def,codeoptim.c: Add COB_A_INLINE to new routines 
				to convert DISPLAY into binary values
	* codegen.c,typeck.c: Additional refinements to computing 
				integer expressions faster. Now includes BINARY data
				fields even on little endian systems.

2020-04-26  Ron Norman <rjn@inglenet.com>
	* codeoptim.def,codeoptim.c: New routines to convert DISPLAY into
				binary values
	* codegen.c: Use new get_numdisps/64/s64 routines
	* typeck.c: Check for integer expression and emit faster arithmetic
			code by using the C language to do the arithmetic
	* flag.def: New flag -fno-fast-math to disable these changes
				for additional testing

2020-04-23  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: added ACCEPT with CURSOR parsing

2020-04-22  Ron Norman <rjn@inglenet.com>

	* codegen.c: New internal function $: for emitting
			    a compare of integer values

	* typeck.c: Check for field that is native short/int/long
			   and emit direct C operators for add/subtract
			   instead of an inline function call

2020-04-14  Ron Norman <rjn@inglenet.com>

	* typeck.c: Remove ERROR for OPEN I-O of LINE SEQUENTIAL
				OPEN I-O is required for bi-directional pipe
	* typeck.c: Remove ERROR for REWRITE of LINE SEQUENTIAL
	            This has been supported for a while

2020-04-03  Ron Norman <rjn@inglenet.com>

	* codegen.c: Based on 'align-record' 01s & 77s in LOCAL-STORAGE 